--- a/source/catalog.html
+++ b/source/catalog.html
@@ -31,227 +31,221 @@
   </header>
   <main>
     <h1 class="visually-hidden">Cat Energy</h1>
-    <div class="container">
-      <section class="catalog">
-        <h2 class="catalog__title">Каталог продукции</h2>
-        <ul class="catalog__list">
-          <li class="catalog__item">
-            <div class="product">
-              <img clss="product__img" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
-              <div class="product__description">
-                <h3 class="product__title">Cat Energy PRO 500 г</h3>
-                <table class="product__info">
-                  <tr>
-                    <td class="">Объем</td>
-                    <td class="">500 г</td>
-                  </tr>
-                  <tr>
-                    <td class="">Вкус</td>
-                    <td class="">Курица</td>
-                  </tr>
-                  <tr>
-                    <td class="">Цена</td>
-                    <td class="">700 Р.</td>
-                  </tr>
-                </table>
-              </div>
+    <section class="catalog">
+      <h2 class="catalog__title">Каталог продукции</h2>
+      <ul class="catalog__list">
+        <li class="catalog__item">
+          <div class="product">
+            <img clss="product__img" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
+            <div class="product__description">
+              <h3 class="product__title">Cat Energy PRO 500 г</h3>
+              <table class="product__info">
+                <tr>
+                  <td>Объем</td>
+                  <td>500 г</td>
+                </tr>
+                <tr>
+                  <td>Вкус</td>
+                  <td>Курица</td>
+                </tr>
+                <tr>
+                  <td>Цена</td>
+                  <td>700 Р.</td>
+                </tr>
+              </table>
             </div>
-            <a class="product__btn button" href="#">Заказать</a>
-          </li>
-          <li class="catalog__item">
-            <div class="product">
-              <img clss="product__img" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
-              <div class="product__description">
-                <h3 class="product__title">Cat Energy PRO 1000</h3>
-                <table class="product__info">
-                  <tr>
-                    <td class="">Объем</td>
-                    <td class="">1000 г</td>
-                  </tr>
-                  <tr>
-                    <td class="">Вкус</td>
-                    <td class="">Курица</td>
-                  </tr>
-                  <tr>
-                    <td class="">Цена</td>
-                    <td class="">1000 Р.</td>
-                  </tr>
-                </table>
-              </div>
-            </div>
-            <a class="product__btn button" href="#">Заказать</a>
-          </li>
-          <li class="catalog__item">
-            <div class="product">
-              <img clss="product__img" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
-              <div class="product__description">
-                <h3 class="product__title">Cat Energy PRO 500 г</h3>
-                <table class="product__info">
-                  <tr>
-                    <td class="">Объем</td>
-                    <td class="">500 г</td>
-                  </tr>
-                  <tr>
-                    <td class="">Вкус</td>
-                    <td class="">Рыба</td>
-                  </tr>
-                  <tr>
-                    <td class="">Цена</td>
-                    <td class="">700 Р.</td>
-                  </tr>
-                </table>
-              </div>
-            </div>
-            <a class="product__btn button" href="#">Заказать</a>
-          </li>
-          <li class="catalog__item">
-            <div class="product">
-              <img clss="product__img" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
-              <div class="product__description">
-                <h3 class="product__title">Cat Energy PRO 1000 г</h3>
-                <table class="product__info">
-                  <tr>
-                    <td class="">Объем</td>
-                    <td class="">1000 г</td>
-                  </tr>
-                  <tr>
-                    <td class="">Вкус</td>
-                    <td class="">Рыба</td>
-                  </tr>
-                  <tr>
-                    <td class="">Цена</td>
-                    <td class="">1000 Р.</td>
-                  </tr>
-                </table>
-              </div>
-            </div>
-            <a class="product__btn button" href="#">Заказать</a>
-          </li>
-          <li class="catalog__item">
-            <div class="product">
-              <img clss="product__img" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 500 г">
-              <div class="product__description">
-                <h3 class="product__title">Cat Energy Slim 500 г</h3>
-                <table class="product__info">
-                  <tr>
-                    <td class="">Объем</td>
-                    <td class="">500 г</td>
-                  </tr>
-                  <tr>
-                    <td class="">Вкус</td>
-                    <td class="">Гречка</td>
-                  </tr>
-                  <tr>
-                    <td class="">Цена</td>
-                    <td class="">400 Р.</td>
-                  </tr>
-                </table>
-              </div>
-            </div>
-            <a class="product__btn button" href="#">Заказать</a>
-          </li>
-          <li class="catalog__item">
-            <div class="product">
-              <img clss="product__img" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 1000 г">
-              <div class="product__description">
-                <h3 class="product__title">Cat Energy Slim 1000 г</h3>
-                <table class="product__info">
-                  <tr>
-                    <td class="">Объем</td>
-                    <td class="">500 г</td>
-                  </tr>
-                  <tr>
-                    <td class="">Вкус</td>
-                    <td class="">Гречка</td>
-                  </tr>
-                  <tr>
-                    <td class="">Цена</td>
-                    <td class="">700 Р.</td>
-                  </tr>
-                </table>
-              </div>
-            </div>
-            <a class="product__btn button" href="#">Заказать</a>
-          </li>
-          <li class="catalog__item">
-            <div class="product">
-              <img clss="product__img" src="img/rice-small-mobile@1x.jpg" width=140 height="144" alt="Cat Energy Slim 500 г">
-              <div class="product__description">
-                <h3 class="product__title">Cat Energy Slim 500 г</h3>
-                <table class="product__info">
-                  <tr>
-                    <td class="">Объем</td>
-                    <td class="">500 г</td>
-                  </tr>
-                  <tr>
-                    <td class="">Вкус</td>
-                    <td class="">Рис</td>
-                  </tr>
-                  <tr>
-                    <td class="">Цена</td>
-                    <td class="">500 Р.</td>
-                  </tr>
-                </table>
-              </div>
-            </div>
-            <a class="product__btn button" href="#">Заказать</a>
-          </li>
-          <li class="catalog__item catalog__item-more">
-            <div class="more__info">
-              <a class="more__link-icon" href="#"></a>
-              <a class="more__link-title" href="#">
-                <h3 class="more__title">Показать еще 100500 товаров</h3>
-              </a>
-              <p class="more__text">На самом деле вкусов гораздо больше!</p>
-            </div>
-            <a class="more__btn button" href="#">Показать все</a>
-          </li>
-        </ul>
-      </section>
-    </div>
-    <section class="contacts">
-        <h2 class="visually-hidden">Месторасположение магазина Cat Energy на карте</h2>
-        <div class="container">
-          <div class="contacts__wrapper">
-            <p class="contacts__item">приглашаем к сотрудничеству дилеров</p>
-            <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
           </div>
+          <a class="product__btn button" href="#">Заказать</a>
+        </li>
+        <li class="catalog__item">
+          <div class="product">
+            <img clss="product__img" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
+            <div class="product__description">
+              <h3 class="product__title">Cat Energy PRO 1000</h3>
+              <table class="product__info">
+                <tr>
+                  <td>Объем</td>
+                  <td>1000 г</td>
+                </tr>
+                <tr>
+                  <td>Вкус</td>
+                  <td>Курица</td>
+                </tr>
+                <tr>
+                  <td>Цена</td>
+                  <td>1000 Р.</td>
+                </tr>
+              </table>
+            </div>
+          </div>
+          <a class="product__btn button" href="#">Заказать</a>
+        </li>
+        <li class="catalog__item">
+          <div class="product">
+            <img clss="product__img" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
+            <div class="product__description">
+              <h3 class="product__title">Cat Energy PRO 500 г</h3>
+              <table class="product__info">
+                <tr>
+                  <td>Объем</td>
+                  <td>500 г</td>
+                </tr>
+                <tr>
+                  <td>Вкус</td>
+                  <td>Рыба</td>
+                </tr>
+                <tr>
+                  <td>Цена</td>
+                  <td>700 Р.</td>
+                </tr>
+              </table>
+            </div>
+          </div>
+          <a class="product__btn button" href="#">Заказать</a>
+        </li>
+        <li class="catalog__item">
+          <div class="product">
+            <img clss="product__img" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
+            <div class="product__description">
+              <h3 class="product__title">Cat Energy PRO 1000 г</h3>
+              <table class="product__info">
+                <tr>
+                  <td>Объем</td>
+                  <td>1000 г</td>
+                </tr>
+                <tr>
+                  <td>Вкус</td>
+                  <td>Рыба</td>
+                </tr>
+                <tr>
+                  <td>Цена</td>
+                  <td>1000 Р.</td>
+                </tr>
+              </table>
+            </div>
+          </div>
+          <a class="product__btn button" href="#">Заказать</a>
+        </li>
+        <li class="catalog__item">
+          <div class="product">
+            <img clss="product__img" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 500 г">
+            <div class="product__description">
+              <h3 class="product__title">Cat Energy Slim 500 г</h3>
+              <table class="product__info">
+                <tr>
+                  <td>Объем</td>
+                  <td>500 г</td>
+                </tr>
+                <tr>
+                  <td>Вкус</td>
+                  <td>Гречка</td>
+                </tr>
+                <tr>
+                  <td>Цена</td>
+                  <td>400 Р.</td>
+                </tr>
+              </table>
+            </div>
+          </div>
+          <a class="product__btn button" href="#">Заказать</a>
+        </li>
+        <li class="catalog__item">
+          <div class="product">
+            <img clss="product__img" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 1000 г">
+            <div class="product__description">
+              <h3 class="product__title">Cat Energy Slim 1000 г</h3>
+              <table class="product__info">
+                <tr>
+                  <td>Объем</td>
+                  <td>500 г</td>
+                </tr>
+                <tr>
+                  <td>Вкус</td>
+                  <td>Гречка</td>
+                </tr>
+                <tr>
+                  <td>Цена</td>
+                  <td>700 Р.</td>
+                </tr>
+              </table>
+            </div>
+          </div>
+          <a class="product__btn button" href="#">Заказать</a>
+        </li>
+        <li class="catalog__item">
+          <div class="product">
+            <img clss="product__img" src="img/rice-small-mobile@1x.jpg" width=140 height="144" alt="Cat Energy Slim 500 г">
+            <div class="product__description">
+              <h3 class="product__title">Cat Energy Slim 500 г</h3>
+              <table class="product__info">
+                <tr>
+                  <td>Объем</td>
+                  <td>500 г</td>
+                </tr>
+                <tr>
+                  <td>Вкус</td>
+                  <td>Рис</td>
+                </tr>
+                <tr>
+                  <td>Цена</td>
+                  <td>500 Р.</td>
+                </tr>
+              </table>
+            </div>
+          </div>
+          <a class="product__btn button" href="#">Заказать</a>
+        </li>
+        <li class="catalog__item catalog__item-more">
+          <div class="more__info">
+            <a class="more__link-icon" href="#"></a>
+            <a class="more__link-title" href="#">
+              <h3 class="more__title">Показать еще 100500 товаров</h3>
+            </a>
+            <p class="more__text">На самом деле вкусов гораздо больше!</p>
+          </div>
+          <a class="more__btn button" href="#">Показать все</a>
+        </li>
+      </ul>
+    </section>
+    <section class="contacts">
+      <h2 class="visually-hidden">Месторасположение магазина Cat Energy на карте</h2>
+        <div class="contacts__wrapper">
+          <p class="contacts__item">приглашаем к сотрудничеству дилеров</p>
+          <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
-        <img class="contacts__map" src="img/bg-map-mobile@1x.png" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург" width="320" height="362">
-      </section>
+      <img class="contacts__map" src="img/bg-map-mobile@1x.png" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург" width="320" height="362">
+    </section>
   </main>
   <footer class="page-footer">
-    <div class="footer-wrapper container">
-      <a class="page-footer__logo">
-        <img class="page-footer__logo-img" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
+    <a class="page-footer__logo">
+      <img class="page-footer__logo-img" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
+    </a>
+    <div class="page-footer__social social">
+      <h2 class="visually-hidden">Мы в социальных сетях</h2>
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social__link social__link--vk" href="#">
+            <span class="visually-hidden">Вконтакте</span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--instagram" href="#">
+            <span class="visually-hidden">Инстаграм</span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--fb" href="#">
+            <span class="visually-hidden">Фейсбук</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="page-footer__copyright copyright">
+      <h2 class="visually-hidden">Логотип разработчика сайта</h2>
+      <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">
+        HTML Academy
+        <img class="copyright__logo" src="img/htmlacademy.svg" alt="Логотип HTMLAcademy" width="27" height="34">
       </a>
-      <div class="page-footer__social social">
-        <h2 class="visually-hidden">Мы в социальных сетях</h2>
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--vk" href="#">
-              <span class="visually-hidden">Вконтакте</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--instagram" href="#">
-              <span class="visually-hidden">Инстаграм</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--fb" href="#">
-              <span class="visually-hidden">Фейсбук</span>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="page-footer__copyright copyright">
-        <h2 class="visually-hidden">Логотип разработчика сайта</h2>
-        <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">
-          HTML Academy
-          <img class="copyright__logo" src="img/htmlacademy.svg" alt="Логотип HTMLAcademy" width="27" height="34">
-        </a>
-      </div>
     </div>
   </footer>
   </body>
