--- a/source/index.html
+++ b/source/index.html
@@ -7,126 +7,114 @@
   </head>
   <body>
   <header class="page-header">
-    <div class="container">
-      <nav class="main-nav">
-        <div class="main-nav__wrapper">
-          <a class="main-nav__logo">
-            <img class="main-nav__logo-img" src="img/logo-mobile.svg" width="190" height="37" alt="Логотип Cat Energy">
-          </a>
-          <button class="main-nav__button burger-button button-close" type="button">Открыть меню</button>
-        </div>
-        <ul class="main-nav__list main-menu">
-          <li class="main-menu__item main-menu__item--active">
-            <a class="main-menu__link">Главная</a>
-          </li>
-          <li class="main-menu__item">
-            <a class="main-menu__link" href="catalog.html">Каталог продукции</a>
-          </li>
-          <li class="main-menu__item">
-            <a class="main-menu__link" href="form.html">Подбор программы</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
+    <nav class="main-nav">
+      <div class="main-nav__wrapper">
+        <a class="main-nav__logo">
+          <img class="main-nav__logo-img" src="img/logo-mobile.svg" width="190" height="37" alt="Логотип Cat Energy">
+        </a>
+        <button class="main-nav__btn" type="button">Открыть меню</button>
+      </div>
+      <ul class="main-nav__list main-menu">
+        <li class="main-menu__item main-menu__item--active">
+          <a class="main-menu__link">Главная</a>
+        </li>
+        <li class="main-menu__item">
+          <a class="main-menu__link" href="catalog.html">Каталог продукции</a>
+        </li>
+        <li class="main-menu__item">
+          <a class="main-menu__link" href="form.html">Подбор программы</a>
+        </li>
+      </ul>
+    </nav> 
   </header>
   <main class="page-main">
     <h1 class="visually-hidden">Cat Energy</h1>
       <section class="promo">
-        <div class="container">
-          <div class="promo__wrapper">
-            <h2 class="promo__title">Функциональное питание для котов</h2>
-            <p class="promo__content">Занялся собой? Займись котом</p>
-            <img class="promo__img" src="img/index-can-mobile@1x.png" alt="Продукт Cat Energy" width="280" height="271">
-            <a class="promo__btn button" href="form.html">Подобрать программу</a>
-          </div>
+        <div class="promo__wrapper">
+          <h2 class="promo__title">Функциональное питание для котов</h2>
+          <p class="promo__content">Занялся собой? Займись котом</p>
+          <img class="promo__img" src="img/index-can-mobile@1x.png" alt="Продукт Cat Energy" width="280" height="271">
+          <a class="promo__btn button" href="form.html">Подобрать программу</a>
         </div>
       </section>
-      <div class="container">
-        <section class="programs">
-          <h2 class="visually-hidden">Программы для котов</h2>
-            <ul class="programs__list">
-              <li class="programs__item program program--slim">
-                <h3 class="program__title">Похудение</h3>
-                <p class="program__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-                <a class="program__link" href="catalog.html">Каталог Slim</a>
-              </li>
-              <li class="programs__item program program--pro">
-                <h3 class="program__title">Набор массы</h3>
-                <p class="program__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-                <a class="program__link" href="catalog.html">Каталог Pro</a>
-              </li>
-            </ul>
-        </section>
-        <section class="advantages">
-          <h2 class="visually-hidden">Преимущества функционального питания Cat Energy</h2>
-            <p class="advantages__title">Как это работает</p>
-            <ul class="advantages__list">
-              <li class="advantages-list__item advantages-list__item--leaf">
-                Функциональное питание содержит только полезные питательные вещества.
-              </li>
-              <li class="advantages-list__item advantages-list__item--powder">
-                Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
-              </li>
-              <li class="advantages-list__item advantages-list__item--dining">
-                Замените один-два приема обычной еды на наше функциональное питание.
-              </li>
-              <li class="advantages-list__item advantages-list__item--clock">
-                Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
-              </li>
-            </ul>
-        </section>
-      </div>
+      <section class="programs">
+        <h2 class="visually-hidden">Программы для котов</h2>
+        <ul class="programs__list">
+          <li class="programs__item program program--slim">
+            <h3 class="program__title">Похудение</h3>
+            <p class="program__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+            <a class="program__link" href="catalog.html">Каталог Slim</a>
+          </li>
+          <li class="programs__item program program--pro">
+            <h3 class="program__title">Набор массы</h3>
+            <p class="program__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+            <a class="program__link" href="catalog.html">Каталог Pro</a>
+          </li>
+        </ul>
+      </section>
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества функционального питания Cat Energy</h2>
+          <p class="advantages__title">Как это работает</p>
+          <ul class="advantages__list">
+            <li class="advantages__item advantages__item--leaf">
+              Функциональное питание содержит только полезные питательные вещества.
+            </li>
+            <li class="advantages__item advantages__item--powder">
+              Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+            </li>
+            <li class="advantages__item advantages__item--dining">
+              Замените один-два приема обычной еды на наше функциональное питание.
+            </li>
+            <li class="advantages__item advantages__item--clock">
+              Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+            </li>
+          </ul>
+      </section>
       <section class="example">
-        <div class="container">
-          <div class="example__wrapper">
-            <h2 class="example__title">Живой пример</h2>
-            <p class="example__content">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-          </div>
+        <div class="example__wrapper">
+          <h2 class="example__title">Живой пример</h2>
+          <p class="example__content">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
         </div>
       </section>
       <section class="contacts">
         <h2 class="visually-hidden">Месторасположение магазина Cat Energy на карте</h2>
-        <div class="container">
           <div class="contacts__wrapper">
             <p class="contacts__item">приглашаем к сотрудничеству дилеров</p>
             <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
           </div>
-        </div>
         <img class="contacts__map" src="img/bg-map-mobile@1x.png" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург" width="320" height="362">
       </section>
   </main>
   <footer class="page-footer">
-    <div class="footer-wrapper container">
-      <a class="page-footer__logo">
-        <img class="page-footer__logo-img" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
+    <a class="page-footer__logo">
+      <img class="page-footer__logo-img" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
+    </a>
+    <div class="page-footer__social social">
+      <h2 class="visually-hidden">Мы в социальных сетях</h2>
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social__link social__link--vk" href="#">
+            <span class="visually-hidden">Вконтакте</span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--instagram" href="#">
+            <span class="visually-hidden">Инстаграм</span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--fb" href="#">
+            <span class="visually-hidden">Фейсбук</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="page-footer__copyright copyright">
+      <h2 class="visually-hidden">Логотип разработчика сайта</h2>
+      <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">
+        HTML Academy
+        <img class="copyright__logo" src="img/htmlacademy.svg" alt="Логотип HTMLAcademy" width="27" height="34">
       </a>
-      <div class="page-footer__social social">
-        <h2 class="visually-hidden">Мы в социальных сетях</h2>
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--vk" href="#">
-              <span class="visually-hidden">Вконтакте</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--instagram" href="#">
-              <span class="visually-hidden">Инстаграм</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--fb" href="#">
-              <span class="visually-hidden">Фейсбук</span>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="page-footer__copyright copyright">
-        <h2 class="visually-hidden">Логотип разработчика сайта</h2>
-        <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">
-          HTML Academy
-          <img class="copyright__logo" src="img/htmlacademy.svg" alt="Логотип HTMLAcademy" width="27" height="34">
-        </a>
-      </div>
     </div>
   </footer>
   </body>
