--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Cat Energy</title>
-    <link href="css/style.css" rel="stylesheet">
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Cat Energy</title>
+  <link href="css/style.css" rel="stylesheet">
+</head>
+
+<body>
   <header class="page-header">
-    <div class="container">
-        <nav class="main-nav">
-          <div class="main-nav__wrapper">
-            <a class="main-nav__logo">
-              <img class="main-nav__logo-img" src="img/logo-mobile.svg" width="190" height="37" alt="Логотип Cat Energy">
-            </a>
-            <button class="main-nav__button" type="button">Открыть меню</button>
-          </div>
-          <ul class="main-nav__list main-menu">
-            <li class="main-menu__item">
-              <a class="main-menu__link" href="index.html">Главная</a>
-            </li>
-            <li class="main-menu__item main-menu__item--active">
-              <a class="main-menu__link">Каталог продукции</a>
-            </li>
-            <li class="main-menu__item">
-              <a class="main-menu__link" href="form.html">Подбор программы</a>
-            </li>
-          </ul>
-        </nav>
-    </div>
+    <nav class="main-nav">
+      <div class="main-nav__wrapper">
+        <a class="main-nav__logo" href="index.html">
+          <img class="main-nav__logo-img" src="img/logo-mobile.svg" width="190" height="37" alt="Логотип Cat Energy">
+        </a>
+        <button class="main-nav__button" type="button">Открыть меню</button>
+      </div>
+      <ul class="main-nav__list main-menu">
+        <li class="main-menu__item">
+          <a class="main-menu__link" href="index.html">Главная</a>
+        </li>
+        <li class="main-menu__item main-menu__item--active">
+          <a class="main-menu__link">Каталог продукции</a>
+        </li>
+        <li class="main-menu__item">
+          <a class="main-menu__link" href="form.html">Подбор программы</a>
+        </li>
+      </ul>
+    </nav>
   </header>
   <main>
     <h1 class="visually-hidden">Cat Energy</h1>
@@ -209,15 +209,15 @@
     </section>
     <section class="contacts">
       <h2 class="visually-hidden">Месторасположение магазина Cat Energy на карте</h2>
-        <div class="contacts__wrapper">
-          <p class="contacts__item">приглашаем к сотрудничеству дилеров</p>
-          <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-        </div>
+      <div class="contacts__wrapper">
+        <p class="contacts__item">приглашаем к сотрудничеству дилеров</p>
+        <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      </div>
       <img class="contacts__map" src="img/bg-map-mobile@1x.png" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург" width="320" height="362">
     </section>
   </main>
   <footer class="page-footer">
-    <a class="page-footer__logo">
+    <a class="page-footer__logo" href="index.html">
       <img class="page-footer__logo-img" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
     </a>
     <div class="page-footer__social social">
@@ -248,5 +248,6 @@
       </a>
     </div>
   </footer>
-  </body>
-  </html>
+</body>
+
+</html>
